--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Constituer un équipage pour Jason",
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/jeromeabel/ws-00-argonautes#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.8.3"
   },
   "devDependencies": {
