add README, up URL cloud API

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "API for Argonautes project",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js && yarn dev ../frontend/",
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "repository": {
