--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "frontend",
+  "name": "argonautes-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.9.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "proxy":"http://localhost:3000",
   "dependencies": {
     "axios": "^1.2.2",
     "react": "^18.2.0",
