--- a/backend/package.json
+++ b/backend/package.json
@@ -23,10 +23,11 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
+    "mongodb": "^4.13.0",
     "nodemon": "^2.0.20"
   }
 }
